<resources>
    <string name="app_name">Tryambak</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_case_id">Enter Case Id</string>
    <string name="timestamp">TimeStamp</string>
    <string name="transcript">Transcript</string>
    <string name="location">Location</string>
    <string name="case_id">Case Id:</string>
    <string name="date">Date</string>
    <string name="enter_your_user_id">Enter your User Id</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="capture">Capture</string>
    <string name="upload">Upload</string>
    <string name="additional_images">Additional Images</string>
    <string name="create_a_new_case">Create a New Case</string>
    <string name="or">OR</string>
    <string name="add_to_existing_case">Add to Existing Case</string>
    <string name="area">Area</string>
    <string name="description">Description</string>
    <string name="tampered">Tampered</string>
</resources>